fix(sanar-ui | e-sanar): remove react-custom-scrollbars from e-sanar

--- a/packages/sanar-ui/src/Components/Organisms/MainMenu/style.less
+++ b/packages/sanar-ui/src/Components/Organisms/MainMenu/style.less
@@ -79,13 +79,7 @@
         // Sempre que não houver espaço deixará "scrollavel", mesmo em desktop.
         &--scrollable {
             height: ~'calc(100% - 128px)';
-
-            > div {
-                > div {
-                    margin-right: -15px !important;
-                    margin-bottom: -15px !important;
-                }
-            }
+            overflow-y: auto;
 
             &--element {
                 height: ~'calc(100% - 100px)';
